add multer to laundry

--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,14 @@
 {
   "development": {
     "username": "postgres",
-    "password": "yakuzalordz17",
+    "password": "postgres",
     "database": "LaundryDB",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "panduganteng",
+    "password": "postgres",
     "database": "LaundryTestDB",
     "host": "127.0.0.1",
     "dialect": "postgres",
